APISIX/01-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: hello-v1-nginx
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: hello-v1-nginx.minikube.local
#       http:
#         paths:
#           - backend:
#               service:
#                 name: hello-v1-svc
#                 port:
#                   number: 80
#             path: /
#             pathType: Prefix

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-v1-apisix
spec:
  ingressClassName: apisix # This line is required to use Apisix instead of Nginx
  rules:
    - host: hello-v1-apisix.minikube.local
      http:
        paths:
          - backend:
              service:
                name: hello-v1-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
