APISIX/03-ingress-plugin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-v1-apisix
  annotations:
    k8s.apisix.apache.org/enable-response-rewrite: "true"
    k8s.apisix.apache.org/response-rewrite-set-header: "testkey1:testval1"
spec:
  ingressClassName: apisix # This line is required to use Apisix instead of Nginx
  rules:
    - host: hello-v1-apisix.minikube.local
      http:
        paths:
          - backend:
              service:
                name: hello-v1-svc
                port:
                  number: 80
            path: /
            pathType: Exact
